--- a/style.css
+++ b/style.css
@@ -109,6 +109,59 @@ a {
   background-color: crimson;
 }
 /* HOME ENDS*/
+/*service section start*/
+#services {
+}
+
+#services .services {
+  flex-direction: column;
+  text-align: center;
+  max-width: 1500px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+
+#services .section-title {
+  font-size: 4rem;
+  font-weight: 300;
+  color: black;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+#services .section-title span {
+  color: crimson;
+}
+#services .service-top p {
+  font-size: 1.4rem;
+  margin-top: 5px;
+  line-height: 2.5rem;
+  font-weight: 300px;
+  letter-spacing: 0.05rem;
+}
+#services .service-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#services .service-item {
+  flex-basis: 80%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 30px;
+  border-radius: 10px;
+  margin: 10px 5%;
+  background: linear-gradient(
+    to right bottom,
+    rgba(88, 88, 27, 0.7),
+    rgba(27, 25, 15, 0.3)
+  );
+  backdrop-filter: blur(2rem);
+}
+
+/*service section end*/
 
 /* Keyframes */
 @keyframes text_banner {
