--- a/style.css
+++ b/style.css
@@ -156,10 +156,12 @@ p {
   font-weight: 300px;
   letter-spacing: 0.05rem;
 }
-#services .service-bottom {
+#services .services-bottom {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-top: 50px;
 }
 #services .service-item {
   flex-basis: 80%;
@@ -171,13 +173,14 @@ p {
   border-radius: 10px;
   margin: 10px 5%;
   background: linear-gradient(
-    to right bottom,
-    rgba(88, 88, 27, 0.7),
-    rgba(27, 25, 15, 0.3)
+    to left top,
+    rgba(0, 0, 0, 0.7),
+    rgba(139, 137, 3, 0.3)
   );
   backdrop-filter: blur(2rem);
   position: relative;
   overflow: hidden;
+  box-shadow: 6px 6px 20px rgb(122 122 122 / 100%);
 }
 #services .service-item::after {
   content: "";
@@ -186,6 +189,9 @@ p {
   top: 0;
   height: 100%;
   width: 100%;
+  background-color: black;
+  opacity: 0.5;
+  z-index: -1;
 }
 
 #services .service-bottom .icon {
@@ -202,7 +208,7 @@ p {
 
 #services .service-item h2 {
   font-size: 2rem;
-  color: black;
+  color: white;
   margin-bottom: 10px;
   text-transform: uppercase;
 }
@@ -210,6 +216,7 @@ p {
 #services .service-item p {
   text-align: left;
   font-size: 1.4rem;
+  color: white;
 }
 /*service section end*/
 
