--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ p {
   line-height: 2.5rem;
   font-weight: 300px;
   letter-spacing: 0.05rem;
+  text-align: left;
 }
 #services .services-bottom {
   display: flex;
@@ -174,8 +175,8 @@ p {
   margin: 10px 5%;
   background: linear-gradient(
     to left top,
-    rgba(151, 153, 29, 0.7),
-    rgba(14, 13, 2, 0.3)
+    rgba(5, 35, 70, 0.7),
+    rgba(59, 140, 194, 0.3)
   );
   backdrop-filter: blur(2rem);
   position: relative;
@@ -220,6 +221,10 @@ p {
   line-height: 1.9rem;
 }
 /*service section end*/
+
+/* Projects start */
+
+/* Projects end */
 
 /* Keyframes */
 @keyframes text_banner {
