--- a/Store/store.css
+++ b/Store/store.css
@@ -196,7 +196,7 @@ p {
   margin: 0 auto;
   Justify-content: center;
   Align-items: center;
-  align-text: center;
+  Text-align: center;
 }
 
 #omoss .omoss {
