--- a/style.css
+++ b/style.css
@@ -505,11 +505,7 @@
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    background: linear-gradient(
-      to left top,
-      rgba(5, 35, 70, 0.7),
-      rgba(59, 140, 194, 0.3)
-    );
+    background-color: #1e1e1e;
     color: white;
     backdrop-filter: blur(2rem);
     overflow: hidden;
